Glossary add entry form changed to Japanese

--- a/templates/glossary_add_entry.html
+++ b/templates/glossary_add_entry.html
@@ -9,7 +9,7 @@
         <div class="card">
 
             <div class="card-header">
-                New Entry
+                エントリーを追加する
             </div>
 
             <div class="card-body">
@@ -21,8 +21,8 @@
                     {{ form|crispy }}
 
                     <div class="text-center mt-3">
-                        <button type="submit" name="cancel" class="btn btn-outline-danger mx-2">Cancel</button>
-                        <button type="submit" class="btn btn-outline-primary mx-2">Add</button>
+                        <button type="submit" name="cancel" class="btn btn-secondary btn-sm me-2">キャンセル</button>
+                        <button type="submit" class="btn btn-primary btn-sm">追加</button>
                     </div>
 
                 </form>
