--- a/templates/glossary_detail.html
+++ b/templates/glossary_detail.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-    <div class="col mx-5 mt-4 mb-5">
+    <div class="col mx-5 mt-4 mb-5 wrap-content">
 
         <!-- Glossary heading -->
 
