--- a/templates/translation_detail.html
+++ b/templates/translation_detail.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="col mx-5 mt-4 mb-5">
+    <div class="col mx-5 mt-4 mb-5 wrap-content">
 
         <!-- Translation heading -->
 
