wrap-content css added to search results page

--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-    <div class="col mx-5 mt-4 mb-5">
+    <div class="col mx-5 mt-4 mb-5 wrap-content">
 
         {% if object_list %}  <!-- Results found -->
 
