--- a/templates/entry_create.html
+++ b/templates/entry_create.html
@@ -9,7 +9,7 @@
         <div class="card">
 
             <div class="card-header">
-                用語集エントリーを作成する
+                用語集エントリーを追加する
             </div>
 
             <div class="card-body">
