Minor formatting fix

--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -41,7 +41,7 @@
                             </div>
 
                             <div class="modal-body">
-                                <p>用語集全体をタブ区切りテキストファイル（.txt）としてアップロードすることができます。</p>
+                                <p>用語集全体をタブ区切りテキストファイル（.txt）として<br>アップロードすることができます。</p>
                                 <p><span class="code">原文(tab)訳文(tab)備考</span></p>
                                 <p>例えば：</p>
                                 <p class="code block">
