--- a/templates/glossary_detail.html
+++ b/templates/glossary_detail.html
@@ -69,7 +69,7 @@
                         <tr>
                             <td>備考:</td>
                             {% if object.notes %}
-                                <td>{{ object.notes|linebreaksbr|urlize }}</td>
+                                <td>{{ object.notes|linebreaksbr|urlizetrunc:50 }}</td>
                             {% else %}
                                 <td>なし</td>
                             {% endif %}
@@ -139,7 +139,7 @@
                                             <br>
                                             <div class="table-muted-text">
                                                 ＜備考＞<br>
-                                                {{ item.notes|linebreaksbr|urlize }}
+                                                {{ item.notes|linebreaksbr|urlizetrunc:50 }}
                                             </div>
                                         {% endif %}
                                 </td>
