Template naming update

--- a/templates/_glossary_content_table.html
+++ b/templates/_glossary_content_table.html
@@ -31,7 +31,7 @@
                 </td>
 
                 <td class="col-center-align">
-                    {% include "table_action_buttons.html" %}
+                    {% include "_table_action_buttons.html" %}
                 </td>
 
             </tr>
