--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -23,7 +23,7 @@
 
             </div>
 
-            <!-- Table -->
+            <!-- Results table -->
 
             <table class="table table-bordered table-hover font-14 mt-3">
 
@@ -56,9 +56,9 @@
                                     {{ item.target|highlight_query:query }}
                                     <!-- Include notes if present -->
                                     {% if item.notes %}
-                                        <br>
+                                        <br><br>
                                         <div class="table-muted-text">
-                                            ＜備考＞<br>
+                                            ＜備考＞<br><br>
                                             {{ item.notes|linebreaksbr|urlizetrunc:50 }}
                                         </div>
                                     {% endif %}
