Modal content updated

--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -36,25 +36,28 @@
                         <div class="modal-content">
 
                             <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">アップロードヘルプ</h5>
+                                <h5 class="modal-title" id="exampleModalLabel">用語集のアップロードヘルプ</h5>
                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                             </div>
 
                             <div class="modal-body">
-                                <p>用語集全体をタブ区切りテキストファイル（.txt）として<br>アップロードすることができます。</p>
-                                <p><span class="code">原文(tab)訳文(tab)備考</span></p>
-                                <p>例えば：</p>
-                                <p class="code block">
-                                    電極(tab)electrode<br>
-                                    ガラス基板(tab)glass substrate<br>
-                                    特許文献(tab)Patent Documents(tab)Specification subtitle
-                                </p>
-                                <small><p>なお：</p>
-                                <ul>
-                                    <li>備考は任意です。</li>
-                                    <li>「(tab)」ではなく、実際のタブ文字を入力してください。</li>
-                                    <li>上記フォーマット以外のエントリーは無視されます。</li>
-                                </ul></small>
+                                <small>
+                                    <p>用語集全体をタブ区切りテキストファイル（.txt）として<br>アップロードすることができます。</p>
+                                    <p><span class="code">原文(tab)訳文(tab)備考</span></p>
+                                    <p>例えば：</p>
+                                    <p class="code block">
+                                        電極(tab)electrode<br>
+                                        ガラス基板(tab)glass substrate<br>
+                                        特許文献(tab)Patent Documents(tab)Specification subtitle
+                                    </p>
+                                    <p>なお：</p>
+                                    <ul>
+                                        <li>備考は任意です。</li>
+                                        <li>「(tab)」ではなく、実際のタブ文字を入力してください。</li>
+                                        <li>上記フォーマット以外のエントリーは無視されます。</li>
+                                    </ul>
+                                    <p>原文、訳文、備考のような2列または3列のエクセル表形式の用語集がある場合、エクセル表の内容をテキストファイルにコピーするだけで、各列のデタは自動的にタブ文字で区切られるはずです。</p>
+                                </small>
                             </div>
 
                             <div class="modal-footer">
