--- a/templates/_glossary_content_table.html
+++ b/templates/_glossary_content_table.html
@@ -1,11 +1,11 @@
-<table class="table table-bordered font-14">
+<table class="table table-bordered table-hover font-14">
 
     <thead class="table-primary">
         <tr>
         <th scope="col" style="width: 5%">No.</th>
-        <th scope="col" style="width: 30%">原文</th>
-        <th scope="col" style="width: 35%">訳文</th>
-        <th scope="col" class="col-center-align" style="width: 10%">アクション</th>
+        <th scope="col" style="width: 44%">原文</th>
+        <th scope="col" style="width: 44%">訳文</th>
+        <th scope="col" class="col-center-align" style="width: 7%">アクション</th>
         </tr>
     </thead>
 
@@ -31,7 +31,9 @@
                 </td>
 
                 <td class="col-center-align">
-                    {% include "_table_action_buttons.html" %}
+
+                    {% include "_entry_action_buttons.html" %}
+
                 </td>
 
             </tr>
