--- a/templates/_translation_content_table.html
+++ b/templates/_translation_content_table.html
@@ -2,10 +2,10 @@
 
     <thead class="table-primary">
         <tr>
-        <th scope="col" style="width: 5%">No.</th>
+        <th scope="col" style="width: 5%" class="col-center-align">No.</th>
         <th scope="col" style="width: 44%">原文</th>
         <th scope="col" style="width: 44%">訳文</th>
-        <th scope="col" class="col-center-align" style="width: 7%">アクション</th>
+        <th scope="col" style="width: 7%" class="col-center-align">アクション</th>
         </tr>
     </thead>
 
