--- a/templates/glossary_detail.html
+++ b/templates/glossary_detail.html
@@ -10,15 +10,16 @@
 
         <h4 class="my-4">{{ object.title }}</h4>
 
-            <p>
-                <a href="{% url 'glossary_update' object.pk %}">用語集の詳細を編集する</a> |
-                <a href="{% url 'glossary_delete' object.pk %}">用語集を削除する</a>
-            </p>
-
-
         <!-- Glossary details table -->
 
-        <h5 class="mt-5 mb-4">詳細</h5>
+        <div class="mt-5 mb-4">
+            <h5 class="d-inline">用語集の詳細</h5>
+            &nbsp;
+            <small>
+                <a href="{% url 'glossary_update' object.pk %}">詳細を編集する</a> |
+                <a href="{% url 'glossary_delete' object.pk %}">用語集を削除する</a>
+            </small>
+        </div>
 
         <div class="row justify-content-start">
             <div class="col-8">
@@ -81,7 +82,7 @@
         </div>
 
 
-        <!-- Glossary content -->
+        <!-- Glossary content table -->
 
         {% if num_of_entries > 0 %}
 
@@ -90,27 +91,27 @@
                 <!-- Don't display table straight away -->
 
                 <br>
+                <p>＊この用語集のサイズが大きい（エントリー数：{{ num_of_entries|intcomma }}）ため、すべてのエントリーを表示するのに時間がかかるかもしれません。</p>
                 <p>
                     <a href="{% url 'glossary_all_entries' object.pk %}">
                         全てのエントリーを表示する
                     </a>
                 </p>
 
-                <p>＊この用語集のサイズが大きい（エントリー数：{{ num_of_entries|intcomma }}）ため、すべてのエントリーを表示するのに時間がかかるかもしれません。</p>
-
             {% else %}
 
                 <!-- Display table straight away -->
 
-                <br><br>
-                <h5>すべてのエントリー</h5>
-
-                <p>
-                    <a href="{% url 'glossary_add_entry' glossary=object.pk %}?previous_url={{ request.get_full_path|urlencode }}">
-                        エントリーを追加する
-                    </a>
-                </p>
                 <br>
+                <div class="mb-4 ">
+                    <h5 class="d-inline">用語集の内容</h5>
+                    &nbsp;
+                    <small>
+                        <a href="{% url 'glossary_add_entry' glossary=object.pk %}?previous_url={{ request.get_full_path|urlencode }}">
+                            エントリーを追加する
+                        </a>
+                    </small>
+                </div>
 
                 {% include "_glossary_content_table.html" %}
 
