--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,9 @@
         <!-- Bootstrap and Popper JS -->
         <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
 
+        <!-- HTMX -->
+        <script src="{% static 'js/htmx.min.js' %}"></script>
+
     </body>
 
 </html>
