--- a/staticfiles/css/custom.css
+++ b/staticfiles/css/custom.css
@@ -235,3 +235,10 @@ tr {
 .wrap-content {
     word-break: break-word;
 }
+
+/* Button spinner */
+/* See
+https://stackoverflow.com/questions/58466453/how-can-i-show-hide-a-bootstrap-spinner-with-jquery
+*/
+#spinner { display: none; }
+body.busy .spinner { display: block !important; }
