--- a/templates/base.html
+++ b/templates/base.html
@@ -73,6 +73,9 @@
         <!-- HTMX -->
         <script src="{% static 'js/htmx.min.js' %}"></script>
 
+        <!-- Custom JS -->
+        <script src="{% static 'js/custom.js' %}"></script>
+
     </body>
 
 </html>
