--- a/templates/glossary_upload.html
+++ b/templates/glossary_upload.html
@@ -22,9 +22,22 @@
 
                     <!-- Help, cancel, and upload buttons -->
                     <div class="text-center mt-4">
-                        <a href="#" data-bs-toggle="modal" data-bs-target="#uploadHelpModal" class="btn btn-secondary btn-sm" role="button">ヘルプ</a>
-                        <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">キャンセル</button>
-                        <button type="submit" class="btn btn-primary btn-sm">アップロード</button>
+
+                        <!-- Help button -->
+                        <a href="#" data-bs-toggle="modal" data-bs-target="#uploadHelpModal" class="btn btn-secondary btn-sm" role="button">
+                            ヘルプ
+                        </a>
+
+                        <!-- Cancel button -->
+                        <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">
+                            キャンセル
+                        </button>
+
+                        <!-- Upload button -->
+                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick="showSpinner();">
+                            アップロード
+                        </button>
+
                     </div>
 
                 </form>
