--- a/templates/translation_upload.html
+++ b/templates/translation_upload.html
@@ -31,7 +31,7 @@
                         <button type="submit" name="cancel" class="btn btn-secondary btn-sm mx-2">キャンセル</button>
 
                         <!-- Upload button -->
-                        <button type="submit" class="btn btn-primary btn-sm" id="spinner" onclick='update();'>
+                        <button type="submit" class="btn btn-primary btn-sm" id="upload-button" onclick='showSpinner();'>
                             アップロード
                         </button>
 
@@ -44,13 +44,5 @@
         </div>
 
     </div>
-
-    <script>
-        function update() {
-            var btn = document.getElementById('spinner');
-            btn.innerHTML =
-                '<span class="spinner-border spinner-border-sm"></span>&nbspアップロード中...';
-        }
-    </script>
 
 {% endblock %}
