--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -54,7 +54,9 @@
             </div>
 
             <!-- Search button -->
-            <button class="btn btn-primary btn-sm me-3 px-3" type="submit">検索</button>
+            <button type="submit" class="btn btn-primary btn-sm me-3 px-3" id="search-button" onclick="showSearchSpinner();">
+                検索
+            </button>
 
         </form>
 
